--- a/index.html
+++ b/index.html
@@ -6,60 +6,73 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kanban Board</title>
     <link rel="stylesheet" href="style.css">
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> -->
     <script src="script.js" defer></script>
 </head>
  <body>
     <div class="container">
         <h1>Kanbanzawa, Hyacinth Marie</h1>
         <div class="container-columns">
+
             <div class="column" data-column="to-do">
-                <div class="column-title"></div>
-                <h3>To do</h3>
-                <button class="add-btn">+</button>
-                <div class="add-task" hidden>
-                    <input type="text" placeholder="Enter Task" class="task-name">
-                    <textarea placeholder="note" class="task-note"></textarea>
-                    <div class="form-actions">
-                        <button class="cancel-btn">Cancel</button>
-                        <button class="confirm-btn">Add</button>
-                    </div>
+                <div class="column-header">
+                    <h3>To do</h3>
+                    <button class="add-btn" aria-label="Add Task">+</button>
+                </div>
+                <div class="add-task-section" hidden>
+            <input type="text" placeholder="Enter Task" class="task-name-form">
+            <textarea placeholder="Add a note" class="task-note-form"></textarea>
+            <div class="priority-row">
+                <label for="priority">Priority:</label>
+                <select class="task-priority-input" id="priority">
+                    <option value="Low" selected>Low</option>
+                    <option value="Medium">Medium</option>
+                    <option value="High">High</option>
+                </select>
+            </div>
+            <div class="form-actions">
+                <button class="cancel-btn" type="button">Cancel</button>
+                <button class="confirm-btn" type="button">Add Task</button>
+            </div>
+        </div>
+                <div class="tasks"></div>
+            </div>
+
+            <div class="column" data-column="doing">
+                <div class="column-header">
+                    <h3>Doing</h3>
+                    <button class="add-btn" aria-label="Add Task">+</button>
                 </div>
                 <div class="tasks"></div>
             </div>
-            <div class="column" data-column="doing">
-                <div class="column-title"></div>
-                <h3>Doing</h3>
-                <button class="add-btn">+</button>
-                <div class="add-task" hidden>
-                    <input type="text" placeholder="enter task" class="task-name">
-                    <textarea placeholder="add a note" class="task-note"></textarea>
-                    <div class="form-actions">
-                        <button class="cancel-btn">Cancel</button>
-                        <button class="confirm-btn">Add</button>
-                    </div>
-                </div>
-                <div class="tasks">
-                    <div class="task">
 
-                    </div>
-                </div>
-            </div>
             <div class="column" data-column="done">
-                <div class="column-title"></div>
-                <h3>Done</h3>
-                <button class="add-btn">+</button>
-                <div class="add-task" hidden>
-                    <input type="text" placeholder="Enter Task" class="task-name">
-                    <textarea placeholder="note" class="task-note"></textarea>
-                    <div class="form-actions">
-                        <button class="cancel-btn">Cancel</button>
-                        <button class="confirm-btn">Add</button>
-                    </div>
+                <div class="column-header">
+                    <h3>Done</h3>
+                    <button class="add-btn">+</button>
                 </div>
                 <div class="tasks"></div>
             </div>
         </div>
     </div>
+
+    <!-- Template for Adding Tasks Section -->
+     <template id="add-task-form-template">
+        <div class="add-task-section" hidden>
+            <input type="text" placeholder="Enter Task" class="task-name-form">
+            <textarea placeholder="Add a note" class="task-note-form"></textarea>
+            <div class="priority-row">
+                <label for="priority">Priority:</label>
+                <select class="task-priority-input" id="priority">
+                    <option value="Low" selected>Low</option>
+                    <option value="Medium">Medium</option>
+                    <option value="High">High</option>
+                </select>
+            </div>
+            <div class="form-actions">
+                <button class="cancel-btn" type="button">Cancel</button>
+                <button class="confirm-btn" type="button">Add Task</button>
+            </div>
+        </div>
+    </template>
  </body>
  </html>
