Added light and dark mode

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="task-dom.js" defer></script>
     <script src="drag-drop-service.js" defer></script>
     <script src="keyboard-shortcuts.js" defer></script>
+    <script src="light-dark-theme.js" defer></script>
     <script src="main.js" defer></script>
 </head>
  <body>
