Revised keyboard functions

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="column" data-column="to-do">
                 <div class="column-header">
                     <h3>To do</h3>
-                    <button class="add-btn" aria-label="Add Task" accesskey = "h">+</button>
+                    <button class="add-btn" aria-label="Add Task">+</button>
                 </div>
                 <div class="add-task-section" hidden>
             <input type="text" placeholder="Enter Task" class="task-name-form">
@@ -31,7 +31,7 @@
             </div>
             <div class="form-actions">
                 <button class="cancel-btn" type="button">Cancel</button>
-                <button class="confirm-btn" type="button" accesskey="z" onclick="alert('Clicked!')">Add Task</button>
+                <button class="confirm-btn" type="button">Add Task</button>
             </div>
         </div>
                 <div class="tasks"></div>
