--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="task-service.js" defer></script>
     <script src="task-dom.js" defer></script>
     <script src="drag-drop-service.js" defer></script>
-    <script src="keyboard-shortcuts.js" defer></script>
+    <script src="keyboard.js" defer></script>
     <script src="light-dark-theme.js" defer></script>
     <script src="main.js" defer></script>
     <script src="mobileView.js" defer></script>
