--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="drag-drop-service.js" defer></script>
     <script src="keyboard-shortcuts.js" defer></script>
     <script src="light-dark-theme.js" defer></script>
-    <script src="main.js" defer></script>
+    <script type="module" src="main.js" defer></script>
     <script src="mobileView.js" defer></script>
 </head>
  <body>
