--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<!-- Kanban Board Structure -->
- <!DOCTYPE html>
- <html lang="en">
- <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kanban Board</title>
@@ -13,93 +12,53 @@
     <script src="keyboard.js" defer></script>
     <script src="light-dark-theme.js" defer></script>
     <script type="module" src="main.js" defer></script>
-
 </head>
- <body>
+<body>
     <div class="container">
         <h1 class="container__title">Kanbanzawa, Hyacinth Marie</h1>
-        <div class="container__columns">
-
-            <div class="column" data-column="to-do">
-                <div class="column__header column__header--todo">
-                    <h3 class="column__title">To do</h3>
-                    <button class="column__add-button" aria-label="Add Task">+</button>
-                </div>
-                <div class="add-task-section" hidden>
-                    <input type="text" placeholder="Enter Task" class="task-name-form">
-                    <textarea placeholder="Add a note" class="task-note-form"></textarea>
-                    <div class="priority-row">
-                        <label for="priority">Priority:</label>
-                        <select class="task-priority-input" id="priority">
-                            <option value="Low" selected>Low</option>
-                            <option value="Medium">Medium</option>
-                            <option value="High">High</option>
-                        </select>
-                    </div>
-                    <div class="form-actions">
-                        <button class="cancel-btn" type="button">Cancel</button>
-                        <button class="confirm-btn" type="button">Add Task</button>
-                    </div>
-                </div>
-                <div class="tasks"></div>
-            </div>
-
-            <div class="column" data-column="doing">
-                <div class="column__header column__header--doing">
-                    <h3 class="column__title">Doing</h3>
-                    <button class="column__add-button" aria-label="Add Task">+</button>
-                </div>
-                <div class="tasks"></div>
-            </div>
-
-            <div class="column" data-column="done">
-                <div class="column__header column__header--done">
-                    <h3 class="column__title">Done</h3>
-                    <button class="column__add-button" aria-label="Add Task">+</button>
-                </div>
-                <div class="tasks"></div>
-            </div>
-        </div>
+        <div class="container__columns" id="COLUMNS_CONTAINER"></div>
     </div>
 
-    <!-- Template for Adding Tasks Section -->
-    <template id="ADD_TASK_FORM_TEMPLATE">
-        <div class="add-task-section" hidden>
-            <input type="text" placeholder="Enter Task" class="task-name-form">
-            <textarea placeholder="Add a note" class="task-note-form"></textarea>
-            <div class="priority-row">
-                <label for="priority">Priority:</label>
-                <select class="task-priority-input" id="priority">
-                    <option value="Low" selected>Low</option>
-                    <option value="Medium">Medium</option>
-                    <option value="High">High</option>
-                </select>
+    <template id="COLUMN_TEMPLATE">
+        <div class="column" data-column="">
+            <div class="column__header">
+                <h3 class="column__title"></h3>
+                <button class="column__add-button" aria-label="Add Task">+</button>
             </div>
-            <div class="form-actions">
-                <button class="cancel-btn" type="button">Cancel</button>
-                <button class="confirm-btn" type="button">Add Task</button>
+            <div class="add-task-section" hidden>
+                <input type="text" placeholder="Enter Task" class="task-name-form">
+                <textarea placeholder="Add a note" class="task-note-form"></textarea>
+                <div class="priority-row">
+                    <label for="priority">Priority:</label>
+                    <select class="task-priority-input" id="priority">
+                        <option value="Low" selected>Low</option>
+                        <option value="Medium">Medium</option>
+                        <option value="High">High</option>
+                    </select>
+                </div>
+                <div class="form-actions">
+                    <button class="cancel-btn" type="button">Cancel</button>
+                    <button class="confirm-btn" type="button">Add Task</button>
+                </div>
             </div>
+            <div class="edit-task-section" hidden>
+                <input type="text" placeholder="Enter Task" class="edit-task-name-form">
+                <textarea placeholder="Add a note" class="edit-task-note-form"></textarea>
+                <div class="priority-row">
+                    <label for="edit-priority">Priority:</label>
+                    <select class="edit-task-priority-input" id="edit-priority">
+                        <option value="Low" selected>Low</option>
+                        <option value="Medium">Medium</option>
+                        <option value="High">High</option>
+                    </select>
+                </div>
+                <div class="form-actions">
+                    <button class="edit-cancel-btn" type="button">Cancel</button>
+                    <button class="edit-confirm-btn" type="button">Update Task</button>
+                </div>
+            </div>
+            <div class="tasks"></div>
         </div>
     </template>
-
-    <!-- Template for Editing Tasks Section -->
-    <template id="EDIT_TASK_FORM_TEMPLATE">
-        <div class="edit-task-section" hidden>
-            <input type="text" placeholder="Enter Task" class="edit-task-name-form">
-            <textarea placeholder="Add a note" class="edit-task-note-form"></textarea>
-            <div class="priority-row">
-                <label for="edit-priority">Priority:</label>
-                <select class="edit-task-priority-input" id="edit-priority">
-                    <option value="Low" selected>Low</option>
-                    <option value="Medium">Medium</option>
-                    <option value="High">High</option>
-                </select>
-            </div>
-            <div class="form-actions">
-                <button class="edit-cancel-btn" type="button">Cancel</button>
-                <button class="edit-confirm-btn" type="button">Update Task</button>
-            </div>
-        </div>
-    </template>
- </body>
- </html>
+</body>
+</html>
