--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="container__title">Kanbanzawa, Hyacinth Marie</h1>
+        <h1 class="container__title">Kanban Board</h1>
         <div class="container__columns" id="COLUMNS_CONTAINER"></div>
     </div>
 
