--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="container__columns" id="COLUMNS_CONTAINER"></div>
     </div>
 
+    <!--  Template for Column  -->
     <template id="COLUMN_TEMPLATE">
         <div class="column" data-column="">
             <div class="column__header">
@@ -51,6 +52,7 @@
                     <button class="edit-confirm-btn" type="button">Update Task</button>
                 </div>
             </div>
+            <div class="tasks"></div>
             <div class="tasks">
                 <p class="tasks__empty-state" aria-live="polite">No tasks inside this column</p>
             </div>
